--- a/driver/driverLogin/index.html
+++ b/driver/driverLogin/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
+    <!--Header-->
     <div class="header">
         <div class="logo">
             <img src="/src/images/logo.jpeg" alt="logo">
@@ -31,4 +32,42 @@
         </div>
     </div>
 
+    <!--Sigup form-->
+    <div class="signUpFormContainer">
+        <h2 class="signUpFormHeading">Sign-Up</h2>
+        <div class="signUpForm">
+            <form action="">
+                <div class="form1">
+                    <label for="licenseNo">License No: </label>
+                    <input id="licenseNo" type="text" name="licenseNo" required><br>
+                </div>
+                <div class="form2">
+                    <label for="nicNo">NIC No: </label>
+                    <input id="nicNo" type="text" name="nicNo" required><br>
+                </div>
+                <div class="form3">
+                    <label for="email">E-mail: </label>
+                    <input id="email" type="email" name="email" required><br>
+                </div>
+                <div class="form4">
+                    <label for="mobileNo">Mobile No: </label>
+                    <input id="mobileNo" type="text" name="mobileNo" required><br>
+                </div>
+                <div class="form5">
+                    <label for="password">Create Password: </label>
+                    <input id="password" type="password" name="password" required><br>
+                </div>
+                <div class="form6">
+                    <label for="rePassword">Re-Enter Password: </label>
+                    <input id="rePassword" type="password" name="rePassword" required><br>
+                </div>
+            </form>
+        </div>
+
+    </div>
+    <div>
+        <footer>
+            <section>&copy;All rights reserved</section>
+         </footer>
+    </div>
 </body>
