Add the DriverLogin form and driverAddComplaint form

--- a/driver/driverAddComplaint/index.html
+++ b/driver/driverAddComplaint/index.html
@@ -30,5 +30,52 @@
             <h2>Complaints</h2>
         </div>
     </div>
+    <!--form-->
+    <div class="FormContainer">
+        <h2 class="FormHeading">Add Complaint</h2>
+        <div class="Form">
+            <form action="">
+                <div class="form1">
+                    <label for="name">Name: </label>
+                    <input id="name" type="text" name="name" required><br>
+                </div>
+                <div class="form2">
+                    <label for="nicNo">NIC No: </label>
+                    <input id="nicNo" type="text" name="nicNo" required><br>
+                </div>
+                <div class="form3">
+                    <label for="contactNo">Contact No: </label>
+                    <input id="contactNo" type="phone" name="contactNo" required><br>
+                </div>
+                <div class="form4">
+                    <label for="title">Title </label>
+                    <input id="title" type="text" name="title" required><br>
+                </div>
+                <div class="form5">
+                    <label for="description">Description</label>
+                    <input id="description" type="text" name="description" required><br>
+                </div>
+                <div class="form6">
+                    <label for="ticketNo">Ticket No</label>
+                    <input id="ticketNo" type="password" name="ticketNo" required><br>
+                </div>
+                <div class="form7">
+                    <label for="footage">Upload footage</label>
+                    <input id="footage" type="file" name="footage" required><br>
+                </div>
+                <div class="form8">
+                    <input id="submit" type="submit" name="submit" value="Submit">
+                </div>
+                <div class="form9">
+                    <input id="cancel" type="reset" name="cancel" value="Cancel">
+                </div>
+            </form>
+        </div>
+    </div>
+    <div>
+        <footer>
+            <section>&copy;All rights reserved</section>
+            </footer>
+    </div>
 
 </body>
