--- a/driver/driverLogin/index.html
+++ b/driver/driverLogin/index.html
@@ -36,7 +36,7 @@
     <div class="signUpFormContainer">
         <h2 class="signUpFormHeading">Sign-Up</h2>
         <div class="signUpForm">
-            <form action="">
+            <form action="D:\GroupProject\ntsf\src\main\java\com\cops\ntsf\util\CustomerDBUtil.java">
                 <div class="form1">
                     <label for="licenseNo">License No: </label>
                     <input id="licenseNo" type="text" name="licenseNo" required><br>
@@ -51,7 +51,7 @@
                 </div>
                 <div class="form4">
                     <label for="mobileNo">Mobile No: </label>
-                    <input id="mobileNo" type="text" name="mobileNo" required><br>
+                    <input id="mobileNo" type="phone" name="mobileNo" required><br>
                 </div>
                 <div class="form5">
                     <label for="password">Create Password: </label>
@@ -61,9 +61,11 @@
                     <label for="rePassword">Re-Enter Password: </label>
                     <input id="rePassword" type="password" name="rePassword" required><br>
                 </div>
+                <div class="form7">
+                    <input id="submit" type="submit" name="submit">
+                </div>
             </form>
         </div>
-
     </div>
     <div>
         <footer>
