Add poppins font for sign up page

--- a/forms/driver/login/index.html
+++ b/forms/driver/login/index.html
@@ -39,7 +39,7 @@
                   </center>
             </span>
             <form id="login"
-                  method="get"
+                  method="post"
                   action="">
                   <label><b>License No</b></label>
                   <center><input type="text"
@@ -55,7 +55,8 @@
                   <center><input type="button"
                                name="login-btn"
                                id="login-btn"
-                               value="Login"></center><br>
+                               value="Login"
+                               onclick="submitLogin()"></center><br>
                   <center><a href="#">Forgot Password?</a></center><br>
                   <center>Do not have an account? <a href="#">Sign Up</a></center>
             </form>
