--- a/forms/driver/sign-up/index.html
+++ b/forms/driver/sign-up/index.html
@@ -115,7 +115,7 @@
                                      name="login-btn"
                                      id="login-btn"
                                      value="Sign Up"
-                                     onclick="verification">
+                                     onclick="submitSignUp()">
                         </center>
                   </a><br>
 
