Clear and rename file structure

--- a/User/Driver/login-driver.html
+++ b/User/Driver/login-driver.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet"
           href="Resources\CSS\login.css">
     <script src="Resources\JS\login-driver.js"></script>
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Poppins">
+    <!-- <script src="https://kit.fontawesome.com/93d4ae8a6b.js"
+            crossorigin="anonymous"></script> -->
 </head>
 
 <body>
