Split JS folder into user and police

--- a/User/Driver/login-driver.html
+++ b/User/Driver/login-driver.html
@@ -10,7 +10,7 @@
         Login-Driver
     </title>
     <link rel="stylesheet"
-          href="Resources\CSS\login.css">
+          href="Resources\CSS\User\login.css">
     <script src="Resources\JS\login-driver.js"></script>
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Poppins">
