Changes in relative paths

--- a/User/Driver/login-driver.html
+++ b/User/Driver/login-driver.html
@@ -10,8 +10,8 @@
         Login-Driver
     </title>
     <link rel="stylesheet"
-          href="Resources\CSS\User\login.css">
-    <script src="Resources\JS\login-driver.js"></script>
+          href="../../Resources/CSS/User/login.css">
+    <script src="../../Resources/JS/User/Driver/login-driver.js"></script>
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Poppins">
     <!-- <script src="https://kit.fontawesome.com/93d4ae8a6b.js"
@@ -22,7 +22,7 @@
     <div class="header"
          align="left">
         <div class="logo1">
-            <img src="Resources\Images\logo_NTSF.png"
+            <img src="../../Resources/Images/logo_NTSF.png"
                  alt="logo1">
         </div>
         <div class="headline">
@@ -33,7 +33,7 @@
 
         <div class="logo2"
              align="right">
-            <img src="Resources\Images\home.png"
+            <img src="../../Resources/Images/home.png"
                  alt="logo1">
         </div>
     </div>
