--- a/User/Driver/signup-driver.html
+++ b/User/Driver/signup-driver.html
@@ -10,15 +10,15 @@
         Sign Up-Driver
     </title>
     <link rel="stylesheet"
-          href="./style.css">
-    <script src="Resources\JS\signup-driver.js"></script>
+          href="../../Resources/CSS/User/signup.css">
+    <script src="../../Resources/JS/User/Driver/signup-driver.js"></script>
 </head>
 
 <body>
     <div class="header"
          align="left">
         <div class="logo1">
-            <img src="./logo_NTSF.png"
+            <img src="../../Resources/Images/logo_NTSF.png"
                  alt="logo1">
         </div>
         <div class="headline">
@@ -29,7 +29,7 @@
 
         <div class="logo2"
              align="right">
-            <img src="./home.png"
+            <img src="../../Resources/Images/home.png"
                  alt="logo1">
         </div>
     </div>
