Adding js file for every login and sign up

--- a/User/Driver/signup-driver.html
+++ b/User/Driver/signup-driver.html
@@ -11,6 +11,10 @@
     </title>
     <link rel="stylesheet"
           href="../../Resources/CSS/User/signup.css">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Poppins">
+    <!-- <script src="https://kit.fontawesome.com/93d4ae8a6b.js"
+            crossorigin="anonymous"></script> -->
     <script src="../../Resources/JS/User/Driver/signup-driver.js"></script>
 </head>
 
@@ -18,7 +22,7 @@
     <div class="header"
          align="left">
         <div class="logo1">
-            <img src="../../Resources/Images/logo_NTSF.png"
+            <img src="../../Resources/All-Images/logo_NTSF.png"
                  alt="logo1">
         </div>
         <div class="headline">
@@ -29,7 +33,7 @@
 
         <div class="logo2"
              align="right">
-            <img src="../../Resources/Images/home.png"
+            <img src="../../Resources/All-Images/home.png"
                  alt="logo1">
         </div>
     </div>
@@ -44,7 +48,7 @@
             </div>
             <div class="filldetails">
                 <div class="policeidfill">
-                    <label for="policeid">Police Id:</label>
+                    <label for="policeid">Licence No:</label>
                     <input type="text"
                            class="input"
                            maxlength="20"
@@ -77,7 +81,7 @@
                 </div>
                 <div class="passwordfill1">
                     <label for="createpassword">Create Password:</label>
-                    <input type="text"
+                    <input type="password"
                            class="input"
                            maxlength="20"
                            size="20">
@@ -86,7 +90,7 @@
                 <div class="passwordfill2">
                     <label for="reenterpassword"
                            length="60">Re-enter Password:</label>
-                    <input type="text"
+                    <input type="password"
                            class="input">
                     <br>
                 </div>
