--- a/User/Vehicle/signup-vehicle.html
+++ b/User/Vehicle/signup-vehicle.html
@@ -1,63 +1,85 @@
-
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible"
+          content="IE=edge">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0">
     <title>
         Sign Up-Vehicle
     </title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet"
+          href="../../Resources/CSS/User/login.css">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Poppins">
+    <script src="../../Resources/JS/User/Driver/signup-vehicle.js"></script>
 </head>
+
 <body>
-    <div class="header" align="left">
+    <div class="header"
+         align="left">
         <div class="logo1">
-            <img src="./logo_NTSF.png" alt="logo1">
-        </div>  
+            <img src="./logo_NTSF.png"
+                 alt="logo1">
+        </div>
         <div class="headline">
             <h2 align="center">
                 <b>Vehicle</b>
             </h2>
         </div>
 
-        <div class="logo2" align="right">
-            <img src="./home.png" alt="logo2">
+        <div class="logo2"
+             align="right">
+            <img src="./home.png"
+                 alt="logo2">
         </div>
-    </div> 
+    </div>
 
     <div class="footer">
-            <form>
-                <div class="heading">
-                    <h2>
-                        <br>
-                        Sign Up 
-                    </h2> 
+        <form>
+            <div class="heading">
+                <h2>
+                    <br>
+                    Sign Up
+                </h2>
+            </div>
+            <div class="filldetails">
+                <div class="vehiclenofill">
+                    <label for="vehicleno">Vehicle No:</label>
+                    <input type="text"
+                           class="input"
+                           maxlength="20"
+                           size="20">
                 </div>
-                <div class="filldetails">
-                    <div class="vehiclenofill">
-                        <label for="vehicleno">Vehicle No:</label>
-                        <input type="text" class="input" maxlength="20" size="20"> 
-                    </div>
-                    <div class="chasisnofill">
-                        <label for="chasisno">Chasis No:</label>
-                        <input type="text" class="input" maxlength="20" size="20"> 
-                    </div>
-                    <div class="modelnofill">
-                        <label for="modelno">Model No:</label>
-                        <input type="text" class="input" maxlength="20" size="20"> 
-                    </div>
+                <div class="chasisnofill">
+                    <label for="chasisno">Chasis No:</label>
+                    <input type="text"
+                           class="input"
+                           maxlength="20"
+                           size="20">
+                </div>
+                <div class="modelnofill">
+                    <label for="modelno">Model No:</label>
+                    <input type="text"
+                           class="input"
+                           maxlength="20"
+                           size="20">
+                </div>
 
-                    <button class="signup-btn">Sign Up</button> 
+                <button class="signup-btn">Sign Up</button>
 
-                    <div class="option">
-                        <h5 align="center">
-                            Already have an account? <a href="#tologin" class="tologin" style="color:blue">Login</a>
-                        </h5>
-                    </div>
-                </div> 
-            </form>
+                <div class="option">
+                    <h5 align="center">
+                        Already have an account? <a href="#tologin"
+                           class="tologin"
+                           style="color:blue">Login</a>
+                    </h5>
+                </div>
+            </div>
+        </form>
     </div>
 
 </body>
+
 </html>
-   
