Set ids for get elements

--- a/User/Driver/login-driver.html
+++ b/User/Driver/login-driver.html
@@ -50,6 +50,7 @@
                 <div class="licensefill">
                     <label for="licenseno">License No:</label>
                     <input type="text"
+                           id="licenceNo"
                            class="input"
                            maxlength="20"
                            size="20">
@@ -58,6 +59,7 @@
                 <div class="passwordfill">
                     <label for="password">Password:</label>
                     <input type="text"
+                           id="password"
                            class="input"
                            maxlength="20"
                            size="20">
