--- a/User/Driver/signup-driver.html
+++ b/User/Driver/signup-driver.html
@@ -47,9 +47,10 @@
                 </h2>
             </div>
             <div class="filldetails">
-                <div class="policeidfill">
-                    <label for="policeid">Licence No:</label>
+                <div class="licencefill">
+                    <label for="licenceno">Licence No:</label>
                     <input type="text"
+                           id="licenceNo"
                            class="input"
                            maxlength="20"
                            size="20">
@@ -58,6 +59,7 @@
                 <div class="nicfill">
                     <label for="nicno">NIC No:</label>
                     <input type="text"
+                           id="nic"
                            class="input"
                            maxlength="20"
                            size="20">
@@ -66,6 +68,7 @@
                 <div class="emailfill">
                     <label for="email">e-mail:</label>
                     <input type="text"
+                           id="email"
                            class="input"
                            maxlength="20"
                            size="20">
@@ -74,6 +77,7 @@
                 <div class="mobilefill">
                     <label for="mobileno">Mobile:</label>
                     <input type="text"
+                           id="mobileNo"
                            class="input"
                            maxlength="15"
                            size="20">
@@ -82,6 +86,7 @@
                 <div class="passwordfill1">
                     <label for="createpassword">Create Password:</label>
                     <input type="password"
+                           id="password"
                            class="input"
                            maxlength="20"
                            size="20">
@@ -91,11 +96,13 @@
                     <label for="reenterpassword"
                            length="60">Re-enter Password:</label>
                     <input type="password"
+                           id="retype-password"
                            class="input">
                     <br>
                 </div>
 
-                <button class="signup-btn">Sign Up</button>
+                <button class="signup-btn"
+                        onclick="submitSignup()">Sign Up</button>
 
                 <div class="option">
                     <h5 align="center">
