--- a/User/Driver/view-fine-driver.html
+++ b/User/Driver/view-fine-driver.html
@@ -1,44 +1,58 @@
-
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible"
+          content="IE=edge">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0">
     <title>
         Fine Check-Driver
     </title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet"
+          href="../../Resources/CSS/User/view-fine.css">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Poppins">
+    <!-- <script src="https://kit.fontawesome.com/93d4ae8a6b.js"
+            crossorigin="anonymous"></script> -->
+    <!-- <script src="../../Resources/JS/User/Driver/signup-driver.js"></script> -->
 </head>
+
 <body>
-    <div class="header" align="left">
+    <div class="header"
+         align="left">
         <div class="logo1">
-            <img src="./logo_NTSF.png" alt="logo1">
-        </div>  
+            <img src="../../Resources/All-Images/logo_NTSF.png"
+                 alt="logo1">
+        </div>
         <div class="headline">
             <h2 align="center">
                 <b>Driver</b>
             </h2>
         </div>
 
-        <div class="logo2" align="right">
-            <img src="./Account.png" alt="logo1">
+        <div class="logo2"
+             align="right">
+            <img src="../../Resources/All-Images/Account.png"
+                 alt="logo1">
         </div>
-    </div> 
+    </div>
     <br>
-    <div class="menu" align="center">
+    <div class="menu"
+         align="center">
         <div class="option1">
             <h3>View Fines</h3>
         </div>
-        
+
         <div class="devider">
             <h3><b>|</b></h3>
-        </div> 
+        </div>
 
         <div class="option2">
             <h3><b><b>Complaint</b></b></h3>
         </div>
     </div>
-    
+
 
     <div class="driverdetails">
         <div class="details">
@@ -53,18 +67,18 @@
         <div class="points">
             <h3>Points : 8/10</h3>
         </div>-->
-    </div> 
+    </div>
 
     <div class="footer">
         <table>
-                <tr>
-                    <th>Ticket No</th>
-                    <th>Fine No</th>
-                    <th>Date</th> 
-                    <th>Due Date</th> 
-                    <th>Fine Amount</th> 
-                    <th>Payment Status</th>
-                </tr>
+            <tr>
+                <th>Ticket No</th>
+                <th>Fine No</th>
+                <th>Date</th>
+                <th>Due Date</th>
+                <th>Fine Amount</th>
+                <th>Payment Status</th>
+            </tr>
 
             <br>
             <tr>
@@ -75,7 +89,7 @@
                 <td>Rs.5000/=</td>
                 <td>
                     <div class="pay">
-                        <button class="pay-btn">Pay</button> 
+                        <button class="pay-btn">Pay</button>
                     </div>
                 </td>
             </tr>
@@ -86,10 +100,10 @@
                 <td>25/10</td>
                 <td>Rs.2000/=</td>
                 <td style="color:#4B6E8E">Paid</td>
-            </tr>  
+            </tr>
         </table>
     </div>
 
 </body>
+
 </html>
-   
