Create js file for pedestrian sign up

--- a/User/Driver/login-driver.html
+++ b/User/Driver/login-driver.html
@@ -66,7 +66,8 @@
                     <br>
                 </div>
 
-                <button class="login-btn">Login</button>
+                <button class="login-btn"
+                        onclick="submitLogin()">Login</button>
 
                 <div class="forgotpassword">
                     <h5 align="center">
