--- a/User/Pedestrian/signup-pedestrian.html
+++ b/User/Pedestrian/signup-pedestrian.html
@@ -50,22 +50,24 @@
                 <div class="nicnodfill">
                     <label for="nicno">NIC No:</label>
                     <input type="text"
+                           id="nic"
                            class="input"
                            maxlength="20"
                            size="20">
                     <br>
                 </div>
-                <div class="nicissuedatefill">
+                <!-- <div class="nicissuedatefill">
                     <label for="nicissuedate">NIC Issue Date:</label>
                     <input type="text"
                            class="input"
                            maxlength="20"
                            size="20">
                     <br>
-                </div>
+                </div> -->
                 <div class="emailfill">
                     <label for="email">e-mail:</label>
                     <input type="text"
+                           id="email"
                            class="input"
                            maxlength="20"
                            size="20">
@@ -74,6 +76,7 @@
                 <div class="mobilefill">
                     <label for="mobileno">Mobile:</label>
                     <input type="text"
+                           id="mobileNo"
                            class="input"
                            maxlength="15"
                            size="20">
@@ -82,6 +85,7 @@
                 <div class="passwordfill1">
                     <label for="createpassword">Create Password:</label>
                     <input type="text"
+                           id="password"
                            class="input"
                            maxlength="20"
                            size="20">
@@ -91,6 +95,7 @@
                     <label for="reenterpassword"
                            length="60">Re-enter Password:</label>
                     <input type="text"
+                           id="retype-password"
                            class="input">
                     <br>
                 </div>
