Add relative paths to links

--- a/User/Driver/login-driver.html
+++ b/User/Driver/login-driver.html
@@ -74,15 +74,14 @@
 
                 <div class="forgotpassword">
                     <h5 align="center">
-                        <a href="#toforgotpassword"
+                        <a href="../../User/Driver/signup-driver.html"
                            class="toforgotpassword">Forgot Password?</a>
                     </h5>
                 </div>
                 <div class="option">
                     <h5 align="center">
-                        Already have an account? <a #login
-                           href="../../User/Driver/login-driver.html"
-                           class="tologin">Login</a>
+                        Do not have an account? <a href="../../User/Driver/signup-driver.html"
+                           class="tosignup">Sign Up</a>
                     </h5>
                 </div>
             </div>
