--- a/User/Driver/signup-driver.html
+++ b/User/Driver/signup-driver.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="emailfill">
                     <label for="email">e-mail:</label>
-                    <input type="text"
+                    <input type="email"
                            id="email"
                            class="input"
                            maxlength="20"
@@ -107,7 +107,7 @@
 
                 <div class="option">
                     <h5 align="center">
-                        Already have an account? <a href="#tologin"
+                        Already have an account? <a href="../../User/Driver/login-driver.html"
                            class="tologin">Login</a>
                     </h5>
                 </div>
