Change relative path of home image

--- a/User/Driver/login-driver.html
+++ b/User/Driver/login-driver.html
@@ -34,8 +34,8 @@
 
         <div class="logo2"
              align="right">
-            <img src="../../Resources/All-Images/home.png"
-                 alt="logo1">
+            <a href="#"><img src="../../Resources/All-Images/home.png"
+                     alt="logo1"></a>
         </div>
     </div>
 
