Add correct relative path of account image

--- a/User/Driver/view-fine-driver.html
+++ b/User/Driver/view-fine-driver.html
@@ -33,8 +33,9 @@
 
         <div class="logo2"
              align="right">
-            <img src="../../Resources/All-Images/Account.png"
-                 alt="logo1">
+            <a href="#"><img src="../../Resources/All-Images/Account.png"
+                     alt="logo1"></a>
+
         </div>
     </div>
     <br>
