--- a/User/Vehicle/login-vehicle.html
+++ b/User/Vehicle/login-vehicle.html
@@ -52,9 +52,16 @@
                            maxlength="20"
                            size="20">
                 </div>
-                <div class="chasisnofill">
+                <!-- <div class="chasisnofill">
                     <label for="chasisno">Chasis No:</label>
                     <input type="text"
+                           class="input"
+                           maxlength="20"
+                           size="20">
+                </div> -->
+                <div class="password">
+                    <label for="password">Password</label>
+                    <input type="password"
                            class="input"
                            maxlength="20"
                            size="20">
