Edit relative paths of images and css file

--- a/user/common/profile/index.html
+++ b/user/common/profile/index.html
@@ -11,14 +11,14 @@
         Profile Information-Driver
     </title>
     <link rel="stylesheet"
-          href="../../Resources/CSS/User/profile-information.css">
+          href="../../../resources/css/user/profile/index.css">
 </head>
 
 <body>
     <div class="header"
          align="left">
         <div class="logo1">
-            <img src="../../Resources/All-Images/logo_NTSF.png"
+            <img src="../../../resources/images/logo_NTSF.png"
                  alt="logo1">
         </div>
         <div class="headline">
@@ -29,7 +29,7 @@
 
         <div class="logo2"
              align="right">
-            <img src="../../Resources/All-Images/logout.png"
+            <img src="../../../resources/images/logout.png"
                  alt="logo1">
         </div>
     </div>
