--- a/user/common/fine/view.html
+++ b/user/common/fine/view.html
@@ -10,7 +10,7 @@
         Fine Check-Driver
     </title>
     <link rel="stylesheet"
-          href="../../Resources/CSS/User/view-fine.css">
+          href="../../../resources/css/user/fine/view.css">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Poppins">
     <!-- <script src="https://kit.fontawesome.com/93d4ae8a6b.js"
@@ -22,7 +22,7 @@
     <div class="header"
          align="left">
         <div class="logo1">
-            <img src="../../Resources/All-Images/logo_NTSF.png"
+            <img src="../../../resources/images/logo_NTSF.png"
                  alt="logo1">
         </div>
         <div class="headline">
@@ -33,7 +33,7 @@
 
         <div class="logo2"
              align="right">
-            <a href="#"><img src="../../Resources/All-Images/Account.png"
+            <a href="#"><img src="../../../resources/images/Account.png"
                      alt="logo1"></a>
 
         </div>
