--- a/user/common/fine/view.html
+++ b/user/common/fine/view.html
@@ -34,33 +34,34 @@
         <div class="logo2"
              align="right">
             <a href="#"><img src="../../../resources/images/Account.png"
-                     alt="logo1"></a>
+                     alt="logo1" "></a>
 
         </div>
     </div>
     <br>
-    <div class="menu"
-         align="center">
-        <div class="option1">
-            <h3>View Fines</h3>
+    <div class="
+                     menu"
+                     align="center">
+                <div class="option1">
+                    <h3>View Fines</h3>
+                </div>
+
+                <div class="devider">
+                    <h3><b>|</b></h3>
+                </div>
+
+                <div class="option2">
+                    <h3><b><b>Complaint</b></b></h3>
+                </div>
         </div>
 
-        <div class="devider">
-            <h3><b>|</b></h3>
-        </div>
 
-        <div class="option2">
-            <h3><b><b>Complaint</b></b></h3>
+        <div class="driverdetails">
+            <div class="details">
+                <h3>Name : M.K.G.Perera || Points : 8/10</h3>
+            </div>
         </div>
-    </div>
-
-
-    <div class="driverdetails">
-        <div class="details">
-            <h3>Name : M.K.G.Perera || Points : 8/10</h3>
-        </div>
-    </div>
-    <!--<div class="userdetails"> 
+        <!--<div class="userdetails"> 
         <div class="name">
             <h3>Name : M.K.G.Perera</h3>
         </div> 
