--- a/user/vehicle/complaint/view.html
+++ b/user/vehicle/complaint/view.html
@@ -7,7 +7,7 @@
     <title>
         Complaint Check-Vehicle
     </title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../../../resources/css/user/complain/view.css">
 </head>
 <body>
     <div class="header" align="left">
